// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`project theme tokens > custom satisfies the publish contract 1`] = `
{
  "absolute": "#fcfcfc",
  "accent": "#e9effd",
  "accent-foreground": "#252525",
  "background": "#ffffff",
  "border": "#dcdcdc",
  "card": "#fcfcfc",
  "card-foreground": "#252525",
  "chart-1": "#2563eb",
  "chart-2": "#574deb",
  "chart-3": "#196da6",
  "chart-4": "#745a6f",
  "chart-5": "#79368b",
  "destructive": "#dc3f32",
  "destructive-foreground": "#ffffff",
  "foreground": "#252525",
  "input": "#cbcbcb",
  "input-background": "#fcfcfc",
  "input-readonly-background": "#f4f4f4",
  "muted": "#f2f3f6",
  "muted-foreground": "#6d6d6e",
  "nav": "#fbfbfd",
  "popover": "#fcfcfc",
  "popover-foreground": "#252525",
  "primary": "#2563eb",
  "primary-button-active-border": "#1c398e",
  "primary-button-active-from": "#2563eb",
  "primary-button-active-to": "#193cb8",
  "primary-button-border": "#2b7fff",
  "primary-button-from": "#2563eb",
  "primary-button-hover-border": "#193cb8",
  "primary-button-hover-to": "#155dfc",
  "primary-button-to": "#51a2ff",
  "primary-foreground": "#ffffff",
  "ring": "#2563eb",
  "ring-accent": "#6692f1",
  "secondary": "#f4f4f4",
  "secondary-foreground": "#252525",
  "sidebar": "#ffffff",
  "sidebar-accent": "#e9effd",
  "sidebar-accent-foreground": "#252525",
  "sidebar-border": "#dcdcdc",
  "sidebar-foreground": "#252525",
  "sidebar-primary": "#2563eb",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#2563eb",
}
`;

exports[`project theme tokens > custom satisfies the publish contract 2`] = `
{
  "absolute": "#1d1d1d",
  "accent": "#1d2c43",
  "accent-foreground": "#ffffff",
  "background": "#161616",
  "border": "#575757",
  "card": "#1d1d1d",
  "card-foreground": "#fafafa",
  "chart-1": "#3b82f6",
  "chart-2": "#8267f3",
  "chart-3": "#33afd8",
  "chart-4": "#a5a483",
  "chart-5": "#a579b8",
  "destructive": "#e85d4a",
  "destructive-foreground": "#ffffff",
  "foreground": "#ffffff",
  "input": "#787878",
  "input-background": "#1d1d1d",
  "input-readonly-background": "#323232",
  "muted": "#1c1e22",
  "muted-foreground": "#999a9c",
  "nav": "#141518",
  "popover": "#1d1d1d",
  "popover-foreground": "#fafafa",
  "primary": "#3b82f6",
  "primary-button-active-border": "#2b7fff",
  "primary-button-active-from": "#155dfc",
  "primary-button-active-to": "#1447e6",
  "primary-button-border": "#8ec5ff",
  "primary-button-from": "#3b82f6",
  "primary-button-hover-border": "#51a2ff",
  "primary-button-hover-to": "#155dfc",
  "primary-button-to": "#51a2ff",
  "primary-foreground": "#ffffff",
  "ring": "#3b82f6",
  "ring-accent": "#3062b3",
  "secondary": "#323232",
  "secondary-foreground": "#ffffff",
  "sidebar": "#161616",
  "sidebar-accent": "#1d2c43",
  "sidebar-accent-foreground": "#ffffff",
  "sidebar-border": "#575757",
  "sidebar-foreground": "#ffffff",
  "sidebar-primary": "#3b82f6",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#3b82f6",
}
`;

exports[`project theme tokens > forest satisfies the publish contract 1`] = `
{
  "absolute": "#ffffff",
  "accent": "#e2ede4",
  "accent-foreground": "#18301f",
  "background": "#f7fbf5",
  "border": "#d3dbd3",
  "card": "#ffffff",
  "card-foreground": "#18301f",
  "chart-1": "#26734d",
  "chart-2": "#575694",
  "chart-3": "#19755f",
  "chart-4": "#746128",
  "chart-5": "#7a3e44",
  "destructive": "#dc3f32",
  "destructive-foreground": "#ffffff",
  "foreground": "#18301f",
  "input": "#c1cac2",
  "input-background": "#ffffff",
  "input-readonly-background": "#ecf1ea",
  "muted": "#eaf0e9",
  "muted-foreground": "#5c6e61",
  "nav": "#f3f8f1",
  "popover": "#ffffff",
  "popover-foreground": "#18301f",
  "primary": "#26734d",
  "primary-button-active-border": "#003520",
  "primary-button-active-from": "#176742",
  "primary-button-active-to": "#004427",
  "primary-button-border": "#387d54",
  "primary-button-from": "#176742",
  "primary-button-hover-border": "#004427",
  "primary-button-hover-to": "#00693f",
  "primary-button-to": "#65926e",
  "primary-foreground": "#ffffff",
  "ring": "#26734d",
  "ring-accent": "#659c7f",
  "secondary": "#ecf1ea",
  "secondary-foreground": "#18301f",
  "sidebar": "#f7fbf5",
  "sidebar-accent": "#e2ede4",
  "sidebar-accent-foreground": "#18301f",
  "sidebar-border": "#d3dbd3",
  "sidebar-foreground": "#18301f",
  "sidebar-primary": "#26734d",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#26734d",
}
`;

exports[`project theme tokens > forest satisfies the publish contract 2`] = `
{
  "absolute": "#17271c",
  "accent": "#21402f",
  "accent-foreground": "#edf8ef",
  "background": "#101c14",
  "border": "#4e5a51",
  "card": "#17271c",
  "card-foreground": "#edf8ef",
  "chart-1": "#66d29a",
  "chart-2": "#9a93c0",
  "chart-3": "#47d3ae",
  "chart-4": "#b8c859",
  "chart-5": "#b89d8e",
  "destructive": "#e85d4a",
  "destructive-foreground": "#ffffff",
  "foreground": "#edf8ef",
  "input": "#6d7870",
  "input-background": "#17271c",
  "input-readonly-background": "#2b362e",
  "muted": "#16251c",
  "muted-foreground": "#8c9990",
  "nav": "#101d15",
  "popover": "#17271c",
  "popover-foreground": "#edf8ef",
  "primary": "#66d29a",
  "primary-button-active-border": "#53d595",
  "primary-button-active-from": "#00c07f",
  "primary-button-active-to": "#00ad71",
  "primary-button-border": "#d3ffdd",
  "primary-button-from": "#66d29a",
  "primary-button-hover-border": "#97eab1",
  "primary-button-hover-to": "#00c07f",
  "primary-button-to": "#97eab1",
  "primary-foreground": "#10251a",
  "ring": "#66d29a",
  "ring-accent": "#3f805e",
  "secondary": "#2b362e",
  "secondary-foreground": "#edf8ef",
  "sidebar": "#101c14",
  "sidebar-accent": "#21402f",
  "sidebar-accent-foreground": "#edf8ef",
  "sidebar-border": "#4e5a51",
  "sidebar-foreground": "#edf8ef",
  "sidebar-primary": "#66d29a",
  "sidebar-primary-foreground": "#10251a",
  "sidebar-ring": "#66d29a",
}
`;

exports[`project theme tokens > golden satisfies the publish contract 1`] = `
{
  "absolute": "#fcfcfc",
  "accent": "#f6efe6",
  "accent-foreground": "#252525",
  "background": "#ffffff",
  "border": "#dcdcdc",
  "card": "#fcfcfc",
  "card-foreground": "#252525",
  "chart-1": "#a16207",
  "chart-2": "#9b4d6d",
  "chart-3": "#516d40",
  "chart-4": "#ab5a08",
  "chart-5": "#b13624",
  "destructive": "#dc3f32",
  "destructive-foreground": "#ffffff",
  "foreground": "#252525",
  "input": "#cbcbcb",
  "input-background": "#fcfcfc",
  "input-readonly-background": "#f4f4f4",
  "muted": "#f4f3f1",
  "muted-foreground": "#6d6d6c",
  "nav": "#fcfbfb",
  "popover": "#fcfcfc",
  "popover-foreground": "#252525",
  "primary": "#a16207",
  "primary-button-active-border": "#482400",
  "primary-button-active-from": "#864900",
  "primary-button-active-to": "#5d2a00",
  "primary-button-border": "#9f5e27",
  "primary-button-from": "#864900",
  "primary-button-hover-border": "#5d2a00",
  "primary-button-hover-to": "#8b4500",
  "primary-button-to": "#b27b59",
  "primary-foreground": "#ffffff",
  "ring": "#a16207",
  "ring-accent": "#b98945",
  "secondary": "#f4f4f4",
  "secondary-foreground": "#252525",
  "sidebar": "#ffffff",
  "sidebar-accent": "#f6efe6",
  "sidebar-accent-foreground": "#252525",
  "sidebar-border": "#dcdcdc",
  "sidebar-foreground": "#252525",
  "sidebar-primary": "#a16207",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#a16207",
}
`;

exports[`project theme tokens > golden satisfies the publish contract 2`] = `
{
  "absolute": "#1d1d1d",
  "accent": "#372a16",
  "accent-foreground": "#ffffff",
  "background": "#161616",
  "border": "#575757",
  "card": "#1d1d1d",
  "card-foreground": "#fafafa",
  "chart-1": "#ba7915",
  "chart-2": "#c86277",
  "chart-3": "#6cab73",
  "chart-4": "#dea01d",
  "chart-5": "#de7553",
  "destructive": "#e85d4a",
  "destructive-foreground": "#ffffff",
  "foreground": "#ffffff",
  "input": "#787878",
  "input-background": "#1d1d1d",
  "input-readonly-background": "#323232",
  "muted": "#201e1b",
  "muted-foreground": "#9b9a98",
  "nav": "#161513",
  "popover": "#1d1d1d",
  "popover-foreground": "#fafafa",
  "primary": "#ba7915",
  "primary-button-active-border": "#a65e00",
  "primary-button-active-from": "#914400",
  "primary-button-active-to": "#7d3400",
  "primary-button-border": "#cba07f",
  "primary-button-from": "#a06100",
  "primary-button-hover-border": "#b97b41",
  "primary-button-hover-to": "#914400",
  "primary-button-to": "#b97b41",
  "primary-foreground": "#ffffff",
  "ring": "#ba7915",
  "ring-accent": "#895b15",
  "secondary": "#323232",
  "secondary-foreground": "#ffffff",
  "sidebar": "#161616",
  "sidebar-accent": "#372a16",
  "sidebar-accent-foreground": "#ffffff",
  "sidebar-border": "#575757",
  "sidebar-foreground": "#ffffff",
  "sidebar-primary": "#ba7915",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#ba7915",
}
`;

exports[`project theme tokens > kino satisfies the publish contract 1`] = `
{
  "absolute": "#fcfcfc",
  "accent": "#e9effd",
  "accent-foreground": "#252525",
  "background": "#ffffff",
  "border": "#dcdcdc",
  "card": "#fcfcfc",
  "card-foreground": "#252525",
  "chart-1": "#2563eb",
  "chart-2": "#574deb",
  "chart-3": "#196da6",
  "chart-4": "#745a6f",
  "chart-5": "#79368b",
  "destructive": "#dc3f32",
  "destructive-foreground": "#ffffff",
  "foreground": "#252525",
  "input": "#cbcbcb",
  "input-background": "#fcfcfc",
  "input-readonly-background": "#f4f4f4",
  "muted": "#f2f3f6",
  "muted-foreground": "#6d6d6e",
  "nav": "#fbfbfd",
  "popover": "#fcfcfc",
  "popover-foreground": "#252525",
  "primary": "#2563eb",
  "primary-button-active-border": "#1c398e",
  "primary-button-active-from": "#2563eb",
  "primary-button-active-to": "#193cb8",
  "primary-button-border": "#2b7fff",
  "primary-button-from": "#2563eb",
  "primary-button-hover-border": "#193cb8",
  "primary-button-hover-to": "#155dfc",
  "primary-button-to": "#51a2ff",
  "primary-foreground": "#ffffff",
  "ring": "#2563eb",
  "ring-accent": "#6692f1",
  "secondary": "#f4f4f4",
  "secondary-foreground": "#252525",
  "sidebar": "#ffffff",
  "sidebar-accent": "#e9effd",
  "sidebar-accent-foreground": "#252525",
  "sidebar-border": "#dcdcdc",
  "sidebar-foreground": "#252525",
  "sidebar-primary": "#2563eb",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#2563eb",
}
`;

exports[`project theme tokens > kino satisfies the publish contract 2`] = `
{
  "absolute": "#1d1d1d",
  "accent": "#1d2c43",
  "accent-foreground": "#ffffff",
  "background": "#161616",
  "border": "#575757",
  "card": "#1d1d1d",
  "card-foreground": "#fafafa",
  "chart-1": "#3b82f6",
  "chart-2": "#8267f3",
  "chart-3": "#33afd8",
  "chart-4": "#a5a483",
  "chart-5": "#a579b8",
  "destructive": "#e85d4a",
  "destructive-foreground": "#ffffff",
  "foreground": "#ffffff",
  "input": "#787878",
  "input-background": "#1d1d1d",
  "input-readonly-background": "#323232",
  "muted": "#1c1e22",
  "muted-foreground": "#999a9c",
  "nav": "#141518",
  "popover": "#1d1d1d",
  "popover-foreground": "#fafafa",
  "primary": "#3b82f6",
  "primary-button-active-border": "#2b7fff",
  "primary-button-active-from": "#155dfc",
  "primary-button-active-to": "#1447e6",
  "primary-button-border": "#8ec5ff",
  "primary-button-from": "#3b82f6",
  "primary-button-hover-border": "#51a2ff",
  "primary-button-hover-to": "#155dfc",
  "primary-button-to": "#51a2ff",
  "primary-foreground": "#ffffff",
  "ring": "#3b82f6",
  "ring-accent": "#3062b3",
  "secondary": "#323232",
  "secondary-foreground": "#ffffff",
  "sidebar": "#161616",
  "sidebar-accent": "#1d2c43",
  "sidebar-accent-foreground": "#ffffff",
  "sidebar-border": "#575757",
  "sidebar-foreground": "#ffffff",
  "sidebar-primary": "#3b82f6",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#3b82f6",
}
`;

exports[`project theme tokens > monochrome satisfies the publish contract 1`] = `
{
  "absolute": "#fafafa",
  "accent": "#e9e9e9",
  "accent-foreground": "#171717",
  "background": "#ffffff",
  "border": "#dadada",
  "card": "#fafafa",
  "card-foreground": "#171717",
  "chart-1": "#262626",
  "chart-2": "#572c7e",
  "chart-3": "#19524e",
  "chart-4": "#743f16",
  "chart-5": "#7a1b32",
  "destructive": "#dc3f32",
  "destructive-foreground": "#ffffff",
  "foreground": "#171717",
  "input": "#c7c7c7",
  "input-background": "#fafafa",
  "input-readonly-background": "#f3f3f3",
  "muted": "#f2f2f2",
  "muted-foreground": "#696969",
  "nav": "#fbfbfb",
  "popover": "#fafafa",
  "popover-foreground": "#171717",
  "primary": "#262626",
  "primary-button-active-border": "#030303",
  "primary-button-active-from": "#262626",
  "primary-button-active-to": "#0a0a0a",
  "primary-button-border": "#393939",
  "primary-button-from": "#262626",
  "primary-button-hover-border": "#0a0a0a",
  "primary-button-hover-to": "#262626",
  "primary-button-to": "#505050",
  "primary-foreground": "#ffffff",
  "ring": "#262626",
  "ring-accent": "#888888",
  "secondary": "#f3f3f3",
  "secondary-foreground": "#171717",
  "sidebar": "#ffffff",
  "sidebar-accent": "#e9e9e9",
  "sidebar-accent-foreground": "#171717",
  "sidebar-border": "#dadada",
  "sidebar-foreground": "#171717",
  "sidebar-primary": "#262626",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#262626",
}
`;

exports[`project theme tokens > monochrome satisfies the publish contract 2`] = `
{
  "absolute": "#1c1c1c",
  "accent": "#3f3f3f",
  "accent-foreground": "#f5f5f5",
  "background": "#111111",
  "border": "#515151",
  "card": "#1c1c1c",
  "card-foreground": "#f5f5f5",
  "chart-1": "#f5f5f5",
  "chart-2": "#e8a6f2",
  "chart-3": "#87e3d7",
  "chart-4": "#f8d782",
  "chart-5": "#f8acb7",
  "destructive": "#e85d4a",
  "destructive-foreground": "#ffffff",
  "foreground": "#f5f5f5",
  "input": "#717171",
  "input-background": "#1c1c1c",
  "input-readonly-background": "#2c2c2c",
  "muted": "#1d1d1d",
  "muted-foreground": "#949494",
  "nav": "#141414",
  "popover": "#1c1c1c",
  "popover-foreground": "#f5f5f5",
  "primary": "#f5f5f5",
  "primary-button-active-border": "#f5f5f5",
  "primary-button-active-from": "#dcdcdc",
  "primary-button-active-to": "#c9c9c9",
  "primary-button-border": "#ffffff",
  "primary-button-from": "#f5f5f5",
  "primary-button-hover-border": "#ffffff",
  "primary-button-hover-to": "#dcdcdc",
  "primary-button-to": "#ffffff",
  "primary-foreground": "#171717",
  "ring": "#f5f5f5",
  "ring-accent": "#8e8e8e",
  "secondary": "#2c2c2c",
  "secondary-foreground": "#f5f5f5",
  "sidebar": "#111111",
  "sidebar-accent": "#3f3f3f",
  "sidebar-accent-foreground": "#f5f5f5",
  "sidebar-border": "#515151",
  "sidebar-foreground": "#f5f5f5",
  "sidebar-primary": "#f5f5f5",
  "sidebar-primary-foreground": "#171717",
  "sidebar-ring": "#f5f5f5",
}
`;

exports[`project theme tokens > orange satisfies the publish contract 1`] = `
{
  "absolute": "#fcfcfc",
  "accent": "#fdeee7",
  "accent-foreground": "#252525",
  "background": "#ffffff",
  "border": "#dcdcdc",
  "card": "#fcfcfc",
  "card-foreground": "#252525",
  "chart-1": "#ea580c",
  "chart-2": "#c34770",
  "chart-3": "#726942",
  "chart-4": "#cc550a",
  "chart-5": "#d23226",
  "destructive": "#dc3f32",
  "destructive-foreground": "#ffffff",
  "foreground": "#252525",
  "input": "#cbcbcb",
  "input-background": "#fcfcfc",
  "input-readonly-background": "#f4f4f4",
  "muted": "#f6f3f1",
  "muted-foreground": "#6e6d6c",
  "nav": "#fdfbfb",
  "popover": "#fcfcfc",
  "popover-foreground": "#252525",
  "primary": "#ea580c",
  "primary-button-active-border": "#630600",
  "primary-button-active-from": "#b01900",
  "primary-button-active-to": "#810000",
  "primary-button-border": "#cb382e",
  "primary-button-from": "#b01900",
  "primary-button-hover-border": "#810000",
  "primary-button-hover-to": "#b90000",
  "primary-button-to": "#d76663",
  "primary-foreground": "#ffffff",
  "ring": "#ea580c",
  "ring-accent": "#ed6d2a",
  "secondary": "#f4f4f4",
  "secondary-foreground": "#252525",
  "sidebar": "#ffffff",
  "sidebar-accent": "#fdeee7",
  "sidebar-accent-foreground": "#252525",
  "sidebar-border": "#dcdcdc",
  "sidebar-foreground": "#252525",
  "sidebar-primary": "#ea580c",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#ea580c",
}
`;

exports[`project theme tokens > orange satisfies the publish contract 2`] = `
{
  "absolute": "#1d1d1d",
  "accent": "#442a22",
  "accent-foreground": "#ffffff",
  "background": "#161616",
  "border": "#575757",
  "card": "#1d1d1d",
  "card-foreground": "#fafafa",
  "chart-1": "#fc7950",
  "chart-2": "#ec6298",
  "chart-3": "#8aab8d",
  "chart-4": "#fba038",
  "chart-5": "#fb756d",
  "destructive": "#e85d4a",
  "destructive-foreground": "#ffffff",
  "foreground": "#ffffff",
  "input": "#787878",
  "input-background": "#1d1d1d",
  "input-readonly-background": "#323232",
  "muted": "#221e1d",
  "muted-foreground": "#9c9a99",
  "nav": "#181514",
  "popover": "#1d1d1d",
  "popover-foreground": "#fafafa",
  "primary": "#fc7950",
  "primary-button-active-border": "#cb3700",
  "primary-button-active-from": "#b90000",
  "primary-button-active-to": "#a30000",
  "primary-button-border": "#e19588",
  "primary-button-from": "#c24416",
  "primary-button-hover-border": "#d8654e",
  "primary-button-hover-to": "#b90000",
  "primary-button-to": "#d8654e",
  "primary-foreground": "#ffffff",
  "ring": "#fc7950",
  "ring-accent": "#9a4f37",
  "secondary": "#323232",
  "secondary-foreground": "#ffffff",
  "sidebar": "#161616",
  "sidebar-accent": "#442a22",
  "sidebar-accent-foreground": "#ffffff",
  "sidebar-border": "#575757",
  "sidebar-foreground": "#ffffff",
  "sidebar-primary": "#fc7950",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#fc7950",
}
`;

exports[`project theme tokens > purple satisfies the publish contract 1`] = `
{
  "absolute": "#fcfcfc",
  "accent": "#f2ebfd",
  "accent-foreground": "#252525",
  "background": "#ffffff",
  "border": "#dcdcdc",
  "card": "#fcfcfc",
  "card-foreground": "#252525",
  "chart-1": "#7c3aed",
  "chart-2": "#8637ec",
  "chart-3": "#405ba7",
  "chart-4": "#9b4870",
  "chart-5": "#a0248c",
  "destructive": "#dc3f32",
  "destructive-foreground": "#ffffff",
  "foreground": "#252525",
  "input": "#cbcbcb",
  "input-background": "#fcfcfc",
  "input-readonly-background": "#f4f4f4",
  "muted": "#f4f2f6",
  "muted-foreground": "#6d6d6e",
  "nav": "#fcfbfd",
  "popover": "#fcfcfc",
  "popover-foreground": "#252525",
  "primary": "#7c3aed",
  "primary-button-active-border": "#3d047a",
  "primary-button-active-from": "#6c1fd8",
  "primary-button-active-to": "#4f00a3",
  "primary-button-border": "#7a45f5",
  "primary-button-from": "#6c1fd8",
  "primary-button-hover-border": "#4f00a3",
  "primary-button-hover-to": "#7000e8",
  "primary-button-to": "#8476f9",
  "primary-foreground": "#ffffff",
  "ring": "#7c3aed",
  "ring-accent": "#a77af3",
  "secondary": "#f4f4f4",
  "secondary-foreground": "#252525",
  "sidebar": "#ffffff",
  "sidebar-accent": "#f2ebfd",
  "sidebar-accent-foreground": "#252525",
  "sidebar-border": "#dcdcdc",
  "sidebar-foreground": "#252525",
  "sidebar-primary": "#7c3aed",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#7c3aed",
}
`;

exports[`project theme tokens > purple satisfies the publish contract 2`] = `
{
  "absolute": "#1d1d1d",
  "accent": "#2d2644",
  "accent-foreground": "#ffffff",
  "background": "#161616",
  "border": "#575757",
  "card": "#1d1d1d",
  "card-foreground": "#fafafa",
  "chart-1": "#8964fb",
  "chart-2": "#ad57f6",
  "chart-3": "#56a2da",
  "chart-4": "#c89685",
  "chart-5": "#c86bba",
  "destructive": "#e85d4a",
  "destructive-foreground": "#ffffff",
  "foreground": "#ffffff",
  "input": "#787878",
  "input-background": "#1d1d1d",
  "input-readonly-background": "#323232",
  "muted": "#1e1d22",
  "muted-foreground": "#9a999c",
  "nav": "#151518",
  "popover": "#1d1d1d",
  "popover-foreground": "#fafafa",
  "primary": "#8964fb",
  "primary-button-active-border": "#7a45f5",
  "primary-button-active-from": "#7000e8",
  "primary-button-active-to": "#6300d1",
  "primary-button-border": "#a0a2f6",
  "primary-button-from": "#7850e6",
  "primary-button-hover-border": "#8476f9",
  "primary-button-hover-to": "#7000e8",
  "primary-button-to": "#8476f9",
  "primary-foreground": "#ffffff",
  "ring": "#8964fb",
  "ring-accent": "#6c51c2",
  "secondary": "#323232",
  "secondary-foreground": "#ffffff",
  "sidebar": "#161616",
  "sidebar-accent": "#2d2644",
  "sidebar-accent-foreground": "#ffffff",
  "sidebar-border": "#575757",
  "sidebar-foreground": "#ffffff",
  "sidebar-primary": "#8964fb",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#8964fb",
}
`;

exports[`project theme tokens > red satisfies the publish contract 1`] = `
{
  "absolute": "#fcfcfc",
  "accent": "#fce9e9",
  "accent-foreground": "#252525",
  "background": "#ffffff",
  "border": "#dcdcdc",
  "card": "#fcfcfc",
  "card-foreground": "#252525",
  "chart-1": "#dc2626",
  "chart-2": "#bb2c7e",
  "chart-3": "#6b524e",
  "chart-4": "#c63f16",
  "chart-5": "#cc1b32",
  "destructive": "#dc3f32",
  "destructive-foreground": "#ffffff",
  "foreground": "#252525",
  "input": "#cbcbcb",
  "input-background": "#fcfcfc",
  "input-readonly-background": "#f4f4f4",
  "muted": "#f5f2f2",
  "muted-foreground": "#6e6d6d",
  "nav": "#fdfbfb",
  "popover": "#fcfcfc",
  "popover-foreground": "#252525",
  "primary": "#dc2626",
  "primary-button-active-border": "#670000",
  "primary-button-active-from": "#b60000",
  "primary-button-active-to": "#860000",
  "primary-button-border": "#d12e2f",
  "primary-button-from": "#b60000",
  "primary-button-hover-border": "#860000",
  "primary-button-hover-to": "#c00000",
  "primary-button-to": "#dc6265",
  "primary-foreground": "#ffffff",
  "ring": "#dc2626",
  "ring-accent": "#e76d6d",
  "secondary": "#f4f4f4",
  "secondary-foreground": "#252525",
  "sidebar": "#ffffff",
  "sidebar-accent": "#fce9e9",
  "sidebar-accent-foreground": "#252525",
  "sidebar-border": "#dcdcdc",
  "sidebar-foreground": "#252525",
  "sidebar-primary": "#dc2626",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#dc2626",
}
`;

exports[`project theme tokens > red satisfies the publish contract 2`] = `
{
  "absolute": "#1d1d1d",
  "accent": "#412322",
  "accent-foreground": "#ffffff",
  "background": "#161616",
  "border": "#575757",
  "card": "#1d1d1d",
  "card-foreground": "#fafafa",
  "chart-1": "#ed5554",
  "chart-2": "#e44e9a",
  "chart-3": "#839b8f",
  "chart-4": "#f58f3a",
  "chart-5": "#f5646f",
  "destructive": "#e85d4a",
  "destructive-foreground": "#ffffff",
  "foreground": "#ffffff",
  "input": "#787878",
  "input-background": "#1d1d1d",
  "input-readonly-background": "#323232",
  "muted": "#211d1d",
  "muted-foreground": "#9b9999",
  "nav": "#171414",
  "popover": "#1d1d1d",
  "popover-foreground": "#fafafa",
  "primary": "#ed5554",
  "primary-button-active-border": "#d71d2f",
  "primary-button-active-from": "#c60000",
  "primary-button-active-to": "#b00000",
  "primary-button-border": "#e99297",
  "primary-button-from": "#cd353a",
  "primary-button-hover-border": "#e15d66",
  "primary-button-hover-to": "#c60000",
  "primary-button-to": "#e15d66",
  "primary-foreground": "#ffffff",
  "ring": "#ed5554",
  "ring-accent": "#ad4241",
  "secondary": "#323232",
  "secondary-foreground": "#ffffff",
  "sidebar": "#161616",
  "sidebar-accent": "#412322",
  "sidebar-accent-foreground": "#ffffff",
  "sidebar-border": "#575757",
  "sidebar-foreground": "#ffffff",
  "sidebar-primary": "#ed5554",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#ed5554",
}
`;

exports[`project theme tokens > sunset satisfies the publish contract 1`] = `
{
  "absolute": "#ffffff",
  "accent": "#f8e6e6",
  "accent-foreground": "#3b1f24",
  "background": "#fff9f5",
  "border": "#e0d6d4",
  "card": "#ffffff",
  "card-foreground": "#3b1f24",
  "chart-1": "#b83b5e",
  "chart-2": "#a7379d",
  "chart-3": "#5b5b67",
  "chart-4": "#b6482f",
  "chart-5": "#bb244b",
  "destructive": "#dc3f32",
  "destructive-foreground": "#ffffff",
  "foreground": "#3b1f24",
  "input": "#d0c5c3",
  "input-background": "#ffffff",
  "input-readonly-background": "#f5eeeb",
  "muted": "#f6ecea",
  "muted-foreground": "#7c6769",
  "nav": "#fcf5f2",
  "popover": "#ffffff",
  "popover-foreground": "#3b1f24",
  "primary": "#b83b5e",
  "primary-button-active-border": "#5c0e24",
  "primary-button-active-from": "#a3264d",
  "primary-button-active-to": "#77002a",
  "primary-button-border": "#bc4168",
  "primary-button-from": "#a3264d",
  "primary-button-hover-border": "#77002a",
  "primary-button-hover-to": "#ab104b",
  "primary-button-to": "#c86a8a",
  "primary-foreground": "#ffffff",
  "ring": "#b83b5e",
  "ring-accent": "#cd748b",
  "secondary": "#f5eeeb",
  "secondary-foreground": "#3b1f24",
  "sidebar": "#fff9f5",
  "sidebar-accent": "#f8e6e6",
  "sidebar-accent-foreground": "#3b1f24",
  "sidebar-border": "#e0d6d4",
  "sidebar-foreground": "#3b1f24",
  "sidebar-primary": "#b83b5e",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#b83b5e",
}
`;

exports[`project theme tokens > sunset satisfies the publish contract 2`] = `
{
  "absolute": "#301b21",
  "accent": "#4f272f",
  "accent-foreground": "#fff1eb",
  "background": "#241419",
  "border": "#615254",
  "card": "#301b21",
  "card-foreground": "#fff1eb",
  "chart-1": "#fb7185",
  "chart-2": "#ec5eb5",
  "chart-3": "#8aa7a5",
  "chart-4": "#fb9c50",
  "chart-5": "#fb7185",
  "destructive": "#e85d4a",
  "destructive-foreground": "#ffffff",
  "foreground": "#fff1eb",
  "input": "#807171",
  "input-background": "#301b21",
  "input-readonly-background": "#3e2f32",
  "muted": "#2e1b20",
  "muted-foreground": "#a19190",
  "nav": "#241418",
  "popover": "#301b21",
  "popover-foreground": "#fff1eb",
  "primary": "#fb7185",
  "primary-button-active-border": "#ff6680",
  "primary-button-active-from": "#f53a5c",
  "primary-button-active-to": "#df2147",
  "primary-button-border": "#ffc6d7",
  "primary-button-from": "#fb7185",
  "primary-button-hover-border": "#ff93ac",
  "primary-button-hover-to": "#f53a5c",
  "primary-button-to": "#ff93ac",
  "primary-foreground": "#321218",
  "ring": "#fb7185",
  "ring-accent": "#a04957",
  "secondary": "#3e2f32",
  "secondary-foreground": "#fff1eb",
  "sidebar": "#241419",
  "sidebar-accent": "#4f272f",
  "sidebar-accent-foreground": "#fff1eb",
  "sidebar-border": "#615254",
  "sidebar-foreground": "#fff1eb",
  "sidebar-primary": "#fb7185",
  "sidebar-primary-foreground": "#321218",
  "sidebar-ring": "#fb7185",
}
`;

exports[`project theme tokens > teal satisfies the publish contract 1`] = `
{
  "absolute": "#fcfcfc",
  "accent": "#e7f4f3",
  "accent-foreground": "#252525",
  "background": "#ffffff",
  "border": "#dcdcdc",
  "card": "#fcfcfc",
  "card-foreground": "#252525",
  "chart-1": "#0d9488",
  "chart-2": "#4968b4",
  "chart-3": "#0e847a",
  "chart-4": "#697042",
  "chart-5": "#6e4d5e",
  "destructive": "#dc3f32",
  "destructive-foreground": "#ffffff",
  "foreground": "#252525",
  "input": "#cbcbcb",
  "input-background": "#fcfcfc",
  "input-readonly-background": "#f4f4f4",
  "muted": "#f1f4f4",
  "muted-foreground": "#6c6d6d",
  "nav": "#fbfcfc",
  "popover": "#fcfcfc",
  "popover-foreground": "#252525",
  "primary": "#0d9488",
  "primary-button-active-border": "#00342f",
  "primary-button-active-from": "#00665b",
  "primary-button-active-to": "#00433c",
  "primary-button-border": "#2b7d6e",
  "primary-button-from": "#00665b",
  "primary-button-hover-border": "#00433c",
  "primary-button-hover-to": "#00685b",
  "primary-button-to": "#5c9283",
  "primary-foreground": "#ffffff",
  "ring": "#0d9488",
  "ring-accent": "#31a49a",
  "secondary": "#f4f4f4",
  "secondary-foreground": "#252525",
  "sidebar": "#ffffff",
  "sidebar-accent": "#e7f4f3",
  "sidebar-accent-foreground": "#252525",
  "sidebar-border": "#dcdcdc",
  "sidebar-foreground": "#252525",
  "sidebar-primary": "#0d9488",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#0d9488",
}
`;

exports[`project theme tokens > teal satisfies the publish contract 2`] = `
{
  "absolute": "#1d1d1d",
  "accent": "#213431",
  "accent-foreground": "#ffffff",
  "background": "#161616",
  "border": "#575757",
  "card": "#1d1d1d",
  "card-foreground": "#fafafa",
  "chart-1": "#4eaa9b",
  "chart-2": "#8d7dc1",
  "chart-3": "#3cc1af",
  "chart-4": "#adb65a",
  "chart-5": "#ad8b8f",
  "destructive": "#e85d4a",
  "destructive-foreground": "#ffffff",
  "foreground": "#ffffff",
  "input": "#787878",
  "input-background": "#1d1d1d",
  "input-readonly-background": "#323232",
  "muted": "#1d1f1f",
  "muted-foreground": "#999a9a",
  "nav": "#141616",
  "popover": "#1d1d1d",
  "popover-foreground": "#fafafa",
  "primary": "#4eaa9b",
  "primary-button-active-border": "#007f71",
  "primary-button-active-from": "#006a5f",
  "primary-button-active-to": "#005951",
  "primary-button-border": "#83afa1",
  "primary-button-from": "#157d70",
  "primary-button-hover-border": "#4a9584",
  "primary-button-hover-to": "#006a5f",
  "primary-button-to": "#4a9584",
  "primary-foreground": "#ffffff",
  "ring": "#4eaa9b",
  "ring-accent": "#386f66",
  "secondary": "#323232",
  "secondary-foreground": "#ffffff",
  "sidebar": "#161616",
  "sidebar-accent": "#213431",
  "sidebar-accent-foreground": "#ffffff",
  "sidebar-border": "#575757",
  "sidebar-foreground": "#ffffff",
  "sidebar-primary": "#4eaa9b",
  "sidebar-primary-foreground": "#ffffff",
  "sidebar-ring": "#4eaa9b",
}
`;
